// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`log (isCI = false) > error > renders error message 1`] = `
[
  "[90m│[39m
[31m■[39m  error message
",
]
`;

exports[`log (isCI = false) > info > renders info message 1`] = `
[
  "[90m│[39m
[34m●[39m  info message
",
]
`;

exports[`log (isCI = false) > message > renders message 1`] = `
[
  "[90m│[39m
[90m│[39m  message
",
]
`;

exports[`log (isCI = false) > message > renders message from array 1`] = `
[
  "[90m│[39m
[90m│[39m  line 1
[90m│[39m  line 2
[90m│[39m  line 3
",
]
`;

exports[`log (isCI = false) > message > renders message with custom spacing 1`] = `
[
  "[90m│[39m
[90m│[39m
[90m│[39m
[90m│[39m  spaced message
",
]
`;

exports[`log (isCI = false) > message > renders message with custom symbols and spacing 1`] = `
[
  "[33m--[39m
[31m>>[39m  custom
[33m--[39m  symbols
",
]
`;

exports[`log (isCI = false) > message > renders multiline message 1`] = `
[
  "[90m│[39m
[90m│[39m  line 1
[90m│[39m  line 2
[90m│[39m  line 3
",
]
`;

exports[`log (isCI = false) > message > renders multiline standalone message 1`] = `
[
  "
line 1
line 2
line 3
",
]
`;

exports[`log (isCI = false) > message > renders standalone message 1`] = `
[
  "
standalone message
",
]
`;

exports[`log (isCI = false) > step > renders step message 1`] = `
[
  "[90m│[39m
[32m◇[39m  step message
",
]
`;

exports[`log (isCI = false) > success > renders success message 1`] = `
[
  "[90m│[39m
[32m◆[39m  success message
",
]
`;

exports[`log (isCI = false) > warn > renders warn message 1`] = `
[
  "[90m│[39m
[33m▲[39m  warn message
",
]
`;

exports[`log (isCI = true) > error > renders error message 1`] = `
[
  "[90m│[39m
[31m■[39m  error message
",
]
`;

exports[`log (isCI = true) > info > renders info message 1`] = `
[
  "[90m│[39m
[34m●[39m  info message
",
]
`;

exports[`log (isCI = true) > message > renders message 1`] = `
[
  "[90m│[39m
[90m│[39m  message
",
]
`;

exports[`log (isCI = true) > message > renders message from array 1`] = `
[
  "[90m│[39m
[90m│[39m  line 1
[90m│[39m  line 2
[90m│[39m  line 3
",
]
`;

exports[`log (isCI = true) > message > renders message with custom spacing 1`] = `
[
  "[90m│[39m
[90m│[39m
[90m│[39m
[90m│[39m  spaced message
",
]
`;

exports[`log (isCI = true) > message > renders message with custom symbols and spacing 1`] = `
[
  "[33m--[39m
[31m>>[39m  custom
[33m--[39m  symbols
",
]
`;

exports[`log (isCI = true) > message > renders multiline message 1`] = `
[
  "[90m│[39m
[90m│[39m  line 1
[90m│[39m  line 2
[90m│[39m  line 3
",
]
`;

exports[`log (isCI = true) > message > renders multiline standalone message 1`] = `
[
  "
line 1
line 2
line 3
",
]
`;

exports[`log (isCI = true) > message > renders standalone message 1`] = `
[
  "
standalone message
",
]
`;

exports[`log (isCI = true) > step > renders step message 1`] = `
[
  "[90m│[39m
[32m◇[39m  step message
",
]
`;

exports[`log (isCI = true) > success > renders success message 1`] = `
[
  "[90m│[39m
[32m◆[39m  success message
",
]
`;

exports[`log (isCI = true) > warn > renders warn message 1`] = `
[
  "[90m│[39m
[33m▲[39m  warn message
",
]
`;
